--- a/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -64,6 +64,7 @@
     <Compile Include="FoodWaste\IDomainObject.cs" />
     <Compile Include="FoodWaste\IFoodGroup.cs" />
     <Compile Include="FoodWaste\IForeignKey.cs" />
+    <Compile Include="FoodWaste\IForeignKeyable.cs" />
     <Compile Include="FoodWaste\IIdentifiable.cs" />
     <Compile Include="FoodWaste\ITranslatable.cs" />
     <Compile Include="FoodWaste\ITranslation.cs" />
