--- a/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Finansstyring\RegnskabslisteHelper.cs" />
     <Compile Include="FoodWaste\DataProvider.cs" />
     <Compile Include="FoodWaste\DomainObjectBase.cs" />
+    <Compile Include="FoodWaste\FoodGroup.cs" />
     <Compile Include="FoodWaste\ForeignKey.cs" />
     <Compile Include="FoodWaste\IdentifiableBase.cs" />
     <Compile Include="FoodWaste\TranslatableBase.cs" />
