--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -108,6 +108,7 @@
     <Compile Include="FinansstyringRepository.cs" />
     <Compile Include="FoodWaste\DataRepositoryBase.cs" />
     <Compile Include="FoodWaste\DataRepositoryHelper.cs" />
+    <Compile Include="DataProxies\FoodWaste\FoodGroupProxy.cs" />
     <Compile Include="FoodWaste\SystemDataRepository.cs" />
     <Compile Include="FællesRepository.cs" />
     <Compile Include="KalenderRepository.cs" />
