--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Core\KalenderCommandHandlerBase.cs" />
     <Compile Include="Core\RegnskabCommandHandlerBase.cs" />
     <Compile Include="ForeignKeyAddCommandHandler.cs" />
+    <Compile Include="ForeignKeyModifyCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
     <Compile Include="TranslationDeleteCommandHandler.cs" />
