--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Commands\BogføringslinjeOpretCommand.cs" />
     <Compile Include="Commands\ForeignKeyAddCommand.cs" />
+    <Compile Include="Commands\ForeignKeyDeleteCommand.cs" />
     <Compile Include="Commands\ForeignKeyModifyCommand.cs" />
     <Compile Include="Commands\TranslationAddCommand.cs" />
     <Compile Include="Commands\TranslationDeleteCommand.cs" />
