--- a/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
+++ b/OSDevGrp.OSIntranet.CommandHandlers/OSDevGrp.OSIntranet.CommandHandlers.csproj
@@ -63,13 +63,14 @@
     <Compile Include="Core\FinansstyringCommandHandlerBase.cs" />
     <Compile Include="Core\FoodWasteSystemDataCommandHandlerBase.cs" />
     <Compile Include="Core\FællesElementCommandHandlerBase.cs" />
-    <Compile Include="Core\ILogicExecuter.cs" />
+    <Compile Include="Core\ILogicExecutor.cs" />
     <Compile Include="Core\KalenderCommandHandlerBase.cs" />
-    <Compile Include="Core\LogicExecuter.cs" />
+    <Compile Include="Core\LogicExecutor.cs" />
     <Compile Include="Core\RegnskabCommandHandlerBase.cs" />
     <Compile Include="ForeignKeyAddCommandHandler.cs" />
     <Compile Include="ForeignKeyDeleteCommandHandler.cs" />
     <Compile Include="ForeignKeyModifyCommandHandler.cs" />
+    <Compile Include="ImportFoodGroupFromDataProviderCommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TranslationAddCommandHandler.cs" />
     <Compile Include="TranslationDeleteCommandHandler.cs" />
