--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Commands\ForeignKeyAddCommand.cs" />
     <Compile Include="Commands\ForeignKeyDeleteCommand.cs" />
     <Compile Include="Commands\ForeignKeyModifyCommand.cs" />
+    <Compile Include="Commands\ImportFoodGroupFromDataProviderCommand.cs" />
     <Compile Include="Commands\TranslationAddCommand.cs" />
     <Compile Include="Commands\TranslationDeleteCommand.cs" />
     <Compile Include="Commands\TranslationModifyCommand.cs" />
