--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Queries\DebitorlisteGetQuery.cs" />
     <Compile Include="Queries\FirmaGetQuery.cs" />
     <Compile Include="Queries\FirmalisteGetQuery.cs" />
+    <Compile Include="Queries\FoodGroupTreeGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugerAftaleGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugerAftalerGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugereGetQuery.cs" />
