--- a/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
+++ b/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
@@ -96,6 +96,7 @@
     <Content Include="commonservice.svc" />
     <Content Include="adressekartotekservice.svc" />
     <Content Include="basicsecuritytokenservice.svc" />
+    <Content Include="foodwastehouseholdservice.svc" />
     <Content Include="foodwastesystemdataservice.svc" />
     <Content Include="kalenderservice.svc" />
     <Content Include="finansstyringservice.svc" />
@@ -114,6 +115,7 @@
     <Compile Include="Implementations\CommonService.cs" />
     <Compile Include="Implementations\FinansstyringService.cs" />
     <Compile Include="Implementations\FoodWasteSystemDataService.cs" />
+    <Compile Include="Implementations\FoodWasteHouseHoldService.cs" />
     <Compile Include="Implementations\IntranetServiceBase.cs" />
     <Compile Include="Implementations\KalenderService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
