--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Services\ICommonService.cs" />
     <Compile Include="Services\IFinansstyringService.cs" />
     <Compile Include="Services\IFoodWasteSystemDataService.cs" />
+    <Compile Include="Services\IFoodWasteHouseHoldService.cs" />
     <Compile Include="Services\IIntranetService.cs" />
     <Compile Include="Services\IKalenderService.cs" />
     <Compile Include="SoapNamespaces.cs" />
