--- a/OSDevGrp.OSIntranet.Services/Web.config
+++ b/OSDevGrp.OSIntranet.Services/Web.config
@@ -47,6 +47,12 @@
           <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="mrgottham@gmail.com"/>
         </conditions>
       </add>
+      <add claimType="http://osdevgrp.local/foodwaste/security/householdmanagement" claimValue="true">
+        <conditions>
+          <clear/>
+          <add valueClaimType="http://schemas.xmlsoap.org/ws/2005/05/identity/claims/emailaddress" matchCondition="^(?(&quot;&quot;)(&quot;&quot;.+?(?&lt;!\\)&quot;&quot;@)|(([0-9a-z]((\.(?!\.))|[-!#\$%&amp;'\*\+/=\?\^`\{\}\|~\w])*)(?&lt;=[0-9a-z])@))(?(\[)(\[(\d{1,3}\.){3}\d{1,3}\])|(([0-9a-z][-\w]*[0-9a-z]*\.)+[a-z0-9][\-a-z0-9]{0,22}[a-z0-9]))$"/>
+        </conditions>
+      </add>
       <add claimType="http://osdevgrp.local/foodwaste/security/user" claimValue="true">
         <conditions>
           <clear/>
@@ -204,6 +210,18 @@
           </identity>
         </endpoint>
       </service>
+      <service name="OSDevGrp.OSIntranet.Services.Implementations.FoodWasteHouseHoldService" behaviorConfiguration="OSDevGrp.OSIntranet.IoCServiceBehavior">
+        <endpoint address="" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding" contract="OSDevGrp.OSIntranet.Contracts.Services.IFoodWasteHouseHoldService">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
+          </identity>
+        </endpoint>
+        <endpoint address="mex" binding="ws2007FederationHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByUserNameTransactionFederationHttpBinding" contract="IMetadataExchange">
+          <identity>
+            <dns value="OSDevGrp.OSIntranet.Tokens"/>
+          </identity>
+        </endpoint>
+      </service>
       <service name="Microsoft.IdentityModel.Protocols.WSTrust.WSTrustServiceContract" behaviorConfiguration="OSDevGrp.OSIntranet.BasicSecurityTokenServiceBehavior">
         <endpoint address="WSX509" binding="wsHttpBinding" bindingConfiguration="OSDevGrp.OSIntranet.SecureByCertificateTransactionHttpBinding" contract="Microsoft.IdentityModel.Protocols.WSTrust.IWSTrustFeb2005SyncContract">
           <identity>
@@ -270,6 +288,7 @@
                 <add allowedAudienceUri="http://localhost/osintranetdev/kalenderservice.svc"/>
                 <add allowedAudienceUri="http://localhost/osintranetdev/commonservice.svc"/>
                 <add allowedAudienceUri="http://localhost/osintranetdev/foodwastesystemdataservice.svc"/>
+                <add allowedAudienceUri="http://localhost/osintranetdev/foodwastehouseholdservice.svc"/>
               </allowedAudienceUris>
             </issuedTokenAuthentication>
           </serviceCredentials>
