--- a/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
+++ b/OSDevGrp.OSIntranet.Services/OSDevGrp.OSIntranet.Services.csproj
@@ -126,6 +126,7 @@
   <ItemGroup>
     <None Include="OSDevGrp.OSIntranet.snk" />
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\Publish to application server.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OSDevGrp.OSIntranet.CommandHandlers\OSDevGrp.OSIntranet.CommandHandlers.csproj">
