--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -256,6 +256,7 @@
     <Compile Include="Unittests\Domain\FoodWaste\DomainObjectMockBuilder.cs" />
     <Compile Include="Unittests\Domain\FoodWaste\FoodGroupCollectionTests.cs" />
     <Compile Include="Unittests\Domain\FoodWaste\FoodGroupTests.cs" />
+    <Compile Include="Unittests\Domain\FoodWaste\FoodItemTests.cs" />
     <Compile Include="Unittests\Domain\FoodWaste\ForeignKeyTests.cs" />
     <Compile Include="Unittests\Domain\FoodWaste\IdentifiableBaseTests.cs" />
     <Compile Include="Unittests\Domain\FoodWaste\TranslatableBaseTests.cs" />
