--- a/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Repositories.Interfaces/OSDevGrp.OSIntranet.Repositories.Interfaces.csproj
@@ -57,6 +57,7 @@
     <Compile Include="DataProxies\FoodWaste\IDataProviderProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IFoodGroupProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IFoodItemGroupProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\IFoodItemProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\IForeignKeyProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\ITranslationInfoProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\ITranslationProxy.cs" />
