--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -99,6 +99,7 @@
     <Compile Include="DataProxies\DataProxyHelper.cs" />
     <Compile Include="DataProxies\FoodWaste\DataProviderProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\FoodItemGroupProxy.cs" />
+    <Compile Include="DataProxies\FoodWaste\FoodItemProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\ForeignKeyProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationInfoProxy.cs" />
     <Compile Include="DataProxies\FoodWaste\TranslationProxy.cs" />
