--- a/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -69,6 +69,7 @@
     <Compile Include="FoodWaste\FoodGroup.cs" />
     <Compile Include="FoodWaste\FoodGroupCollection.cs" />
     <Compile Include="FoodWaste\FoodItem.cs" />
+    <Compile Include="FoodWaste\FoodItemCollection.cs" />
     <Compile Include="FoodWaste\ForeignKey.cs" />
     <Compile Include="FoodWaste\IdentifiableBase.cs" />
     <Compile Include="FoodWaste\TranslatableBase.cs" />
