--- a/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
+++ b/OSDevGrp.OSIntranet.Contracts/OSDevGrp.OSIntranet.Contracts.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Queries\FirmaGetQuery.cs" />
     <Compile Include="Queries\FirmalisteGetQuery.cs" />
     <Compile Include="Queries\FoodGroupTreeGetQuery.cs" />
+    <Compile Include="Queries\FoodItemCollectionGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugerAftaleGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugerAftalerGetQuery.cs" />
     <Compile Include="Queries\KalenderbrugereGetQuery.cs" />
