--- a/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
+++ b/OSDevGrp.OSIntranet.QueryHandlers/OSDevGrp.OSIntranet.QueryHandlers.csproj
@@ -78,6 +78,7 @@
     <Compile Include="FirmalisteGetQueryHandler.cs" />
     <Compile Include="FoodGroupTreeGetQueryHandler.cs" />
     <Compile Include="FoodGroupTreeGetQueryHandlerForSystemView.cs" />
+    <Compile Include="FoodItemCollectionGetQueryHandlerForSystemView.cs" />
     <Compile Include="KalenderbrugerAftaleGetQueryHandler.cs" />
     <Compile Include="KalenderbrugerAftalerGetQueryHandler.cs" />
     <Compile Include="KalenderbrugereGetQueryHandler.cs" />
