--- a/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
+++ b/OSDevGrp.OSIntranet.Domain/OSDevGrp.OSIntranet.Domain.csproj
@@ -71,6 +71,7 @@
     <Compile Include="FoodWaste\FoodItem.cs" />
     <Compile Include="FoodWaste\FoodItemCollection.cs" />
     <Compile Include="FoodWaste\ForeignKey.cs" />
+    <Compile Include="FoodWaste\HouseholdMember.cs" />
     <Compile Include="FoodWaste\IdentifiableBase.cs" />
     <Compile Include="FoodWaste\TranslatableBase.cs" />
     <Compile Include="FoodWaste\Translation.cs" />
