--- a/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -68,6 +68,7 @@
     <Compile Include="FoodWaste\IFoodItemCollection.cs" />
     <Compile Include="FoodWaste\IForeignKey.cs" />
     <Compile Include="FoodWaste\IForeignKeyable.cs" />
+    <Compile Include="FoodWaste\IHouseholdMember.cs" />
     <Compile Include="FoodWaste\IIdentifiable.cs" />
     <Compile Include="FoodWaste\ITranslatable.cs" />
     <Compile Include="FoodWaste\ITranslation.cs" />
