--- a/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
+++ b/OSDevGrp.OSIntranet.Domain.Interfaces/OSDevGrp.OSIntranet.Domain.Interfaces.csproj
@@ -60,7 +60,7 @@
     <Compile Include="Finansstyring\IBudgetkontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IKontogruppelisteHelper.cs" />
     <Compile Include="Finansstyring\IRegnskabslisteHelper.cs" />
-    <Compile Include="FoodWaste\ICommonValidations.cs" />
+    <Compile Include="FoodWaste\IDomainObjectValidations.cs" />
     <Compile Include="FoodWaste\IDataProvider.cs" />
     <Compile Include="FoodWaste\IDomainObject.cs" />
     <Compile Include="FoodWaste\IFoodGroup.cs" />
