--- a/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
+++ b/OSDevGrp.OSIntranet.Tests/OSDevGrp.OSIntranet.Tests.csproj
@@ -341,6 +341,7 @@
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\FoodItemGroupProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\FoodItemProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\ForeignKeyProxyTests.cs" />
+    <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\HouseholdMemberProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationInfoProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\FoodWaste\TranslationProxyTests.cs" />
     <Compile Include="Unittests\Repositories\DataProxies\Fælles\SystemProxyTests.cs" />
