--- a/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
+++ b/OSDevGrp.OSIntranet.Repositories/OSDevGrp.OSIntranet.Repositories.csproj
@@ -113,6 +113,7 @@
     <Compile Include="FoodWaste\DataRepositoryBase.cs" />
     <Compile Include="FoodWaste\DataRepositoryHelper.cs" />
     <Compile Include="DataProxies\FoodWaste\FoodGroupProxy.cs" />
+    <Compile Include="FoodWaste\HouseholdDataRepository.cs" />
     <Compile Include="FoodWaste\SystemDataRepository.cs" />
     <Compile Include="FællesRepository.cs" />
     <Compile Include="KalenderRepository.cs" />
